--- a/CSS/box.CSS
+++ b/CSS/box.CSS
@@ -10,7 +10,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333333;
+  background-color: greenyellow;
 }
 
 li {
@@ -27,7 +27,8 @@ li a {
 
 li a:hover {
   background-color: #111111;
-    </div>
+}
+
 #balk {
     background-color: whitesmoke;
     width:80%;
@@ -50,7 +51,7 @@ li a:hover {
      height: 100%;
     }
     #plaatjes {
-    background-color: greenyellow;
+    background-color: royalblue;
     width: 25%;
     height: 100%;
     }
