--- a/CSS/box.CSS
+++ b/CSS/box.CSS
@@ -7,8 +7,8 @@ body {
 }
 ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  margin: 5px;
+  padding: 10px;
   overflow: hidden;
   background-color: greenyellow;
 }
@@ -22,36 +22,31 @@ li a {
   color: white;
   text-align: center;
   padding: 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111111;
 }
 
 #balk {
     background-color: whitesmoke;
     width:80%;
-    height: 20%;
+    height: 30%;
     }
 #container {
     background-color: yellow;
     width: 80%;
-    height: 75%;
+    height: 70%;
     display: flex;
 }
 #menu {
     background-color: blue;
-    width: 15%;
-    height: 100%;
+    width: 20%;
+    height: 70%;
     }
 #berichten {
      background-color: grey;
      width: 60%;
-     height: 100%;
+     height: 70%;
     }
     #plaatjes {
     background-color: royalblue;
     width: 25%;
-    height: 100%;
+    height: 70%;
     }
