--- a/CSS/box.CSS
+++ b/CSS/box.CSS
@@ -1,5 +1,8 @@
 html {
     height: 100%;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 5px;
 }
 
 body {
@@ -7,7 +10,7 @@ body {
 }
 ul {
   list-style-type: none;
-  margin: 50px;
+  margin: 5px;
   padding: 10px;
   overflow: hidden;
   background-color: greenyellow;
