--- a/CSS/box.CSS
+++ b/CSS/box.CSS
@@ -6,14 +6,34 @@ html {
 }
 
 body {
-    background-color: blueviolet;
+    background-color: paleturquoise;
+    height: 100%;
 }
+
+#balk {
+    background-color: whitesmoke;
+    width:100%;
+    height: 30%;
+    }
+
+#container {
+    background-color: paleturquoise;
+    width: 100%;
+    height: 70%;
+    display: flex;
+}
+
 ul {
   list-style-type: none;
-  margin: 5px;
-  padding: 10px;
+  margin: 0px;
+  padding: 0px;
   overflow: hidden;
-  background-color: greenyellow;
+  background-color: burlywood;
+  position: sticky;
+}
+
+#menu ul {
+    background-color: red;
 }
 
 li {
@@ -24,25 +44,27 @@ li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 16px;
+  padding: 20px 30px;
+  text-decoration: none;
 }
 
-#balk {
-    background-color: whitesmoke;
-    width:100%;
-    height: 30%;
-    }
-#container {
-    background-color: yellow;
-    width: 100%;
-    height: 70%;
-    display: flex;
+li a.active {
+  background-color: #4CAF50;
+  color: white;
 }
+
+li a:hover:not(.active) {
+  background-color: #555;
+  color: white ;
+}
+
 #menu {
     background-color: blue;
     width: 25%;
     height: 70%;
     }
+.jongstejeugd {
+
 #berichten {
      background-color: grey;
      width: 50%;
