--- a/CSS/box.CSS
+++ b/CSS/box.CSS
@@ -64,6 +64,8 @@ li a:hover:not(.active) {
     height: 70%;
     }
 .jongstejeugd {
+    background-color: purple;
+
 
 #berichten {
      background-color: grey;
